@startuml HLPMEI IMHE HOMMIIIII HELP HEALPLPGL MI JOMI@IMGMI@@@!!!!!


entity pessoa{
    *cpf : VARCHAR
    --
    nome : VARCHAR
}

entity aluno{
    *cpf <<FK>> : VARCHAR
    --
    matricula : VARCHAR
}

entity professor{
    *cpf <<FK>> : VARCHAR
}

entity estuda{
    *disciplina <<FK>> : VARCHAR
    *aluno <<FK>> : VARCHAR
}

entity ministra{
    *disciplina <<FK>> : VARCHAR
    *professor <<FK>> : VARCHAR
}

entity disciplina{
    *nome <<PK>> : VARCHAR
    sala <<FK>> : VARCHAR
    --
}

entity sala{
    *numero <<PK>> : VARCHAR
    --
    qtdAlunos : INT
}

pessoa ||--|{ aluno
pessoa ||--|{ professor
aluno ||--|{ estuda
professor ||--|{ ministra
disciplina ||--|{ estuda
disciplina ||--|{ ministra
disciplina }|--|| sala

@enduml